...
    },
    "Close" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "閉じる"
          }
        },
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "닫기"
...
